fix alignment of patient pagination control
Former-commit-id: 93a32ee3bfc885a699508dab327089399d5f0866

--- a/src/pages/patientView/patient.scss
+++ b/src/pages/patientView/patient.scss
@@ -1,6 +1,10 @@
 
 .patientPageHeader {
 
+  .cohortNav {
+    text-align:right;
+  }
+
   position:relative;
   padding-left:45px;
   display:flex;
